Fixed photo stretch

--- a/react-app/src/styles/components/profile/_feed.scss
+++ b/react-app/src/styles/components/profile/_feed.scss
@@ -22,6 +22,7 @@
         height: 5rem;
         width: 5rem;
         border-radius: 50%;
+        object-fit: cover;
     }
     &__feed-sendername {
         padding-left: 1rem;
